# SpacetradersPolylith

./: noxfile.py  pyproject.toml  workspace.toml
bases/spacetraders/agent_api/: __init__.py  core.py
bases/spacetraders/register_api/: __init__.py  core.py
components/spacetraders/DTO/: __init__.py
components/spacetraders/DTO/SpacetradersDTO/: __init__.py  schemas.py
components/spacetraders/config/: __init__.py  core.py
components/spacetraders/constants/: __init__.py  core.py
components/spacetraders/domain/: __init__.py
components/spacetraders/domain/Spacetraders/: __init__.py
components/spacetraders/domain/Spacetraders/Agent/: __init__.py  __methods.py  schemas.py
components/spacetraders/domain/Spacetraders/Contract/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Faction/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Cargo/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Crew/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Frame/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Fuel/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Module/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Mount/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Nav/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Reactor/: __init__.py  schemas.py
components/spacetraders/domain/Spacetraders/Ship/Registration/: __init__.py  schemas.py
components/spacetraders/domain/agent/: __init__.py  schemas.py
components/spacetraders/log/: __init__.py  core.py
components/spacetraders/random_data/: __init__.py  core.py
components/spacetraders/register/: __init__.py  core.py
components/spacetraders/registration/: __init__.py  core.py
components/spacetraders/request_client/: __init__.py  core.py
components/spacetraders/request_client/decoders/: __init__.py  __response.py
components/spacetraders/validators/: __init__.py
components/spacetraders/validators/agent_validators/: __init__.py  __validators.py
config/: .secrets.example.toml  settings.toml
development/: register_agent_test.py
